--- a/src/css/page.css
+++ b/src/css/page.css
@@ -58,7 +58,7 @@
   flex-direction: column;
   justify-content: flex-start;
   margin: 24px 0 0 0;
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: white;
   flex: 1 0 auto; /*for IE11*/
   /* overflow: hidden; */
@@ -121,17 +121,20 @@
 
 .img-banner-mask {
   position: absolute;
+  top: 0;
+  left: 0;
   background-color: rgba(105, 105, 105, 0.5);
   width: 100%;
   height: 100%;
 }
 
 .img-banner img {
-  /* width: 100%; */
-  /* flex-shrink: 1; */
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* ============================================================================================== */
@@ -139,12 +142,13 @@
 /* ============================================================================================== */
 .content-card-header {
   padding: 24px 24px 0 24px;
-  border-bottom: 2px solid #f0f0f0;
+  border-bottom: 1px solid #f0f0f0;
 }
 
 .content-card-header h1 {
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 17px;
+  font-weight: 400;
+  color: #414141;
   margin: 0;
 }
 
